tests/neg/i6779.check
-- [E007] Type Mismatch Error: tests/neg/i6779.scala:10:32 -------------------------------------------------------------
10 |  def g1[T](x: T): F[G[T]] = x.f(using summon[Stuff]) // error
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^
   |                             Found:    F[T]
   |                             Required: F[G[T]]
   |
   | longer explanation available when compiling with `-explain`
-- [E008] Not Found Error: tests/neg/i6779.scala:12:31 -----------------------------------------------------------------
12 |  def g2[T](x: T): F[G[T]] = x.f // error
   |                             ^^^
   |                             value f is not a member of T.
   |                             An extension method was tried, but could not be fully constructed:
   |
   |                                 Test.f[G[T]](x)(given_Stuff)    failed with
   |
   |                                     Found:    (x : T)
   |                                     Required: G[T]
-- [E007] Type Mismatch Error: tests/neg/i6779.scala:14:38 -------------------------------------------------------------
14 |  def g3[T](x: T): F[G[T]] = this.f(x)(using summon[Stuff]) // error
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                             Found:    F[T]
   |                             Required: F[G[T]]
   |
   | longer explanation available when compiling with `-explain`
